--- a/client/css/handoff-387898.webflow.css
+++ b/client/css/handoff-387898.webflow.css
@@ -242,6 +242,15 @@
   background-color: transparent;
 }
 
+.navbar-3.stiky {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  background-color: #fff;
+}
+
 .nav-link-2 {
   font-size: 16px;
   line-height: 16px;
@@ -263,10 +272,8 @@
 }
 
 .container-4 {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
+  display: block;
+  width: 90%;
   max-width: 1200px;
   -webkit-box-pack: justify;
   -webkit-justify-content: space-between;
@@ -276,6 +283,11 @@
   -webkit-align-items: center;
   -ms-flex-align: center;
   align-items: center;
+}
+
+.container-4._2 {
+  padding-top: 15px;
+  padding-bottom: 15px;
 }
 
 .nav-menu-3 {
@@ -309,12 +321,16 @@
   color: #fff;
 }
 
+.btn-cta-header2.early-access.show {
+  display: none;
+}
+
 .div-block {
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  width: 90%;
+  width: 100%;
   max-width: 1500px;
   margin: 20px auto;
   -webkit-box-pack: justify;
@@ -6757,7 +6773,10 @@
   right: 0%;
   bottom: 0%;
   z-index: 1000;
-  display: none;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -webkit-flex-direction: column;
@@ -6889,6 +6908,10 @@
 
 .button-115:hover {
   background-color: rgba(26, 15, 145, 0.8);
+}
+
+.button-115.popup {
+  margin-top: 100px;
 }
 
 .text-span-4 {
@@ -7105,6 +7128,7 @@
 }
 
 .paragraph-26 {
+  display: none;
   color: red;
   font-size: 15px;
   line-height: 25px;
@@ -7112,12 +7136,255 @@
   text-align: center;
 }
 
+.form-block-14 {
+  width: 100%;
+  max-width: 500px;
+  margin-top: 50px;
+}
+
+.form-3 {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.text-field-12 {
+  height: 45px;
+  margin-right: 15px;
+  margin-bottom: 0px;
+  border: 2px solid #4f46ba;
+  border-radius: 9px;
+}
+
+.submit-button-8 {
+  padding-right: 25px;
+  padding-left: 25px;
+  border: 1px solid #4f46ba;
+  border-radius: 9px;
+  background-color: #4f46ba;
+  box-shadow: 4px 4px 13px 0 rgba(33, 123, 244, 0.26);
+  font-size: 16px;
+  font-weight: 700;
+}
+
+.submit-button-8:hover {
+  border: 1px solid #1a0f91;
+  background-color: transparent;
+  color: #1a0f91;
+}
+
+.div-block-489 {
+  width: 90%;
+  max-width: 1500px;
+  margin: 0px auto 100px;
+}
+
+.text-block-4 {
+  color: #797979;
+  font-size: 16px;
+  font-weight: 700;
+}
+
+.div-block-490 {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  margin-top: 25px;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+}
+
+.div-block-490.new {
+  display: -ms-grid;
+  display: grid;
+  width: 100%;
+  margin-top: 40px;
+  justify-items: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  grid-auto-columns: 1fr;
+  grid-column-gap: 16px;
+  grid-row-gap: 16px;
+  -ms-grid-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  -ms-grid-rows: auto;
+  grid-template-rows: auto;
+}
+
+.image-121 {
+  -webkit-filter: grayscale(100%);
+  filter: grayscale(100%);
+}
+
+.div-block-491 {
+  width: 70%;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.div-block-492 {
+  position: relative;
+  width: 788px;
+  padding-top: 50px;
+  padding-bottom: 72px;
+  border-radius: 30px;
+  background-color: #fff;
+}
+
+.form-10 {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  text-align: center;
+}
+
+.image-122 {
+  position: absolute;
+  left: auto;
+  top: 5%;
+  right: 3%;
+  bottom: auto;
+  width: 20px;
+  height: 20px;
+  cursor: pointer;
+}
+
+.form-block-3 {
+  margin-top: 28px;
+}
+
+.popup-early-access {
+  position: fixed;
+  left: 0%;
+  top: 0%;
+  right: 0%;
+  bottom: 0%;
+  z-index: 101;
+  display: none;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.3);
+}
+
+.text-field-17 {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  border-style: solid;
+  border-width: 0px 0px 1px;
+  border-color: #000 #000 #09005d;
+  font-family: Rubik, sans-serif;
+  color: rgba(79, 86, 101, 0.5);
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 400;
+  text-align: center;
+}
+
+.heading-182 {
+  margin-top: 0px;
+  font-size: 50px;
+  line-height: 70px;
+  font-weight: 500;
+  text-align: center;
+}
+
+._2 {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0px;
+  z-index: 100;
+  background-color: #fff;
+}
+
+.div-block-493 {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.div-block-494 {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.div-block-495 {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+}
+
 @media screen and (min-width: 1280px) {
+  .navbar-3 {
+    width: 90%;
+    margin-right: auto;
+    margin-left: auto;
+  }
+
   .container-4 {
     width: 100%;
     max-width: 1440px;
     margin-right: auto;
     margin-left: auto;
+  }
+
+  .div-block-2.lalala {
+    padding-top: 0px;
+    padding-bottom: 0px;
   }
 
   .text-block-18 {
@@ -7139,6 +7406,43 @@
 
   .div-block-480.aaa.lalala {
     height: 85vh;
+  }
+
+  .div-block-489 {
+    margin-top: -25px;
+  }
+
+  .div-block-490.new {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    width: 100%;
+  }
+
+  .image-122 {
+    position: absolute;
+  }
+
+  .div-block-496 {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    height: 100vh;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
   }
 }
 
@@ -7218,9 +7522,17 @@
     font-size: 40px;
     line-height: 56px;
   }
+
+  .early-access-popup {
+    display: none;
+  }
 }
 
 @media screen and (min-width: 1920px) {
+  .navbar-3 {
+    width: 100%;
+  }
+
   .icon-5 {
     display: none;
   }
@@ -7262,6 +7574,18 @@
 @media screen and (max-width: 991px) {
   .body.thankyou {
     background-size: 100%;
+  }
+
+  .navbar-3 {
+    width: 90%;
+    margin-right: auto;
+    margin-left: auto;
+  }
+
+  .navbar-3.stiky {
+    width: 90%;
+    margin-right: auto;
+    margin-left: auto;
   }
 
   .menu-button-3 {
@@ -7317,9 +7641,17 @@
   }
 
   .btn-cta-header2.early-access {
+    display: block;
     width: auto;
     padding-right: 20px;
     padding-left: 20px;
+  }
+
+  .btn-cta-header2.early-access.show {
+    display: block;
+    margin-right: 25px;
+    margin-bottom: 25px;
+    margin-left: 25px;
   }
 
   .div-block-2 {
@@ -8753,6 +9085,10 @@
     color: #000;
   }
 
+  .button-115.popup {
+    margin-top: 70px;
+  }
+
   .section-2 {
     padding-top: 100px;
     padding-bottom: 50px;
@@ -8836,6 +9172,27 @@
   .div-block-487 {
     margin-right: -5%;
     margin-left: -5%;
+  }
+
+  .form-block-14 {
+    margin-top: 25px;
+  }
+
+  .div-block-489 {
+    margin-top: 30px;
+  }
+
+  .image-121 {
+    width: 100%;
+  }
+
+  .div-block-492 {
+    width: 90%;
+  }
+
+  .heading-182 {
+    font-size: 40px;
+    line-height: 50px;
   }
 }
 
@@ -9532,6 +9889,47 @@
     -ms-flex-direction: column;
     flex-direction: column;
   }
+
+  .form-3 {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+  }
+
+  .submit-button-8 {
+    height: 45px;
+    margin-top: 10px;
+  }
+
+  .div-block-490 {
+    display: -ms-grid;
+    display: grid;
+    grid-auto-columns: 1fr;
+    grid-column-gap: 16px;
+    grid-row-gap: 16px;
+    -ms-grid-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
+    -ms-grid-rows: auto auto;
+    grid-template-rows: auto auto;
+  }
+
+  .div-block-490.new {
+    display: -ms-grid;
+    display: grid;
+    grid-auto-columns: 1fr;
+    grid-column-gap: 16px;
+    grid-row-gap: 16px;
+    -ms-grid-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
+    -ms-grid-rows: auto;
+    grid-template-rows: auto;
+  }
+
+  .image-121 {
+    width: 100%;
+  }
 }
 
 @media screen and (max-width: 479px) {
@@ -9567,6 +9965,12 @@
     padding-left: 10px;
     font-size: 12px;
     line-height: 16px;
+  }
+
+  .btn-cta-header2.early-access.show {
+    margin-right: 10px;
+    margin-bottom: 10px;
+    margin-left: 10px;
   }
 
   .text-block-16 {
@@ -10903,6 +11307,10 @@
     height: 45px;
   }
 
+  .button-115.popup {
+    margin-top: 50px;
+  }
+
   .section-2 {
     margin-top: 0px;
     padding-top: 50px;
@@ -10957,6 +11365,41 @@
   .div-block-487 {
     padding-right: 20px;
     padding-left: 20px;
+  }
+
+  .div-block-490 {
+    display: -ms-grid;
+    display: grid;
+    grid-auto-columns: 1fr;
+    grid-column-gap: 16px;
+    grid-row-gap: 16px;
+    -ms-grid-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
+    -ms-grid-rows: auto auto;
+    grid-template-rows: auto auto;
+  }
+
+  .div-block-490.new {
+    justify-items: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -ms-grid-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .image-121 {
+    width: 100%;
+  }
+
+  .div-block-491 {
+    width: 80%;
+  }
+
+  .heading-182 {
+    font-size: 35px;
+    line-height: 40px;
   }
 }
 
